Properties of CGS97 and some other minor enhancements

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -68,6 +68,20 @@
 	pages = {186-194},
 }
 
+@incollection{HL09,
+	year = {2009},
+	isbn = {978-3-642-01464-2},
+	booktitle = {Formal Aspects in Security and Trust},
+	volume = {5491},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/978-3-642-01465-9_16},
+	title = {The Append-Only Web Bulletin Board},
+	url = {http://dx.doi.org/10.1007/978-3-642-01465-9_16},
+	publisher = {Springer Berlin Heidelberg},
+	author = {HEATHER, James and LUNDIN, David},
+	pages = {242-256}
+}
+
 @inproceedings{HKRS12,
 	author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
 	title = {A Fair and Robust Voting System by Broadcast},
