Refactoring the ElGamal part

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -8,7 +8,7 @@
 	title = {A Threshold Cryptosystem without a Trusted Party},
 	url = {http://dx.doi.org/10.1007/3-540-46416-6_47},
 	publisher = {Springer Berlin Heidelberg},
-	author = {PEDERSEN, Torben Pryds},
+	author = {Pedersen, Torben Pryds},
 	pages = {522-526},
 }
 
@@ -22,7 +22,7 @@
 	title = {Wallet Databases with Observers},
 	url = {http://dx.doi.org/10.1007/3-540-48071-4_7},
 	publisher = {Springer Berlin Heidelberg},
-	author = {CHAUM, David and PEDERSEN, Torben Pryds},
+	author = {Chaum, David and Pedersen, Torben Pryds},
 	pages = {89-105},
 }
 
@@ -36,7 +36,7 @@
 	title = {A Secure and Optimally Efficient Multi-Authority Election Scheme},
 	url = {http://dx.doi.org/10.1007/3-540-69053-0_9},
 	publisher = {Springer Berlin Heidelberg},
-	author = {CRAMER, Ronald and GENNARO, Rosario and SCHOENMAKERS, Berry},
+	author = {Cramer, Ronald and Gennaro, Rosario and Schoenmakers, Berry},
 	pages = {103-118},
 }
 
@@ -50,7 +50,7 @@
 	title = {Unifying Zero-Knowledge Proofs of Knowledge},
 	url = {http://dx.doi.org/10.1007/978-3-642-02384-2_17},
 	publisher = {Springer Berlin Heidelberg},
-	author = {MAURER, Ueli},
+	author = {Maurer, Ueli},
 	pages = {272-286}
 }
 
@@ -64,7 +64,7 @@
 	title = {How To Prove Yourself: Practical Solutions to Identification and Signature Problems},
 	url = {http://dx.doi.org/10.1007/3-540-47721-7_12},
 	publisher = {Springer Berlin Heidelberg},
-	author = {FIAT, Amos and SHAMIR, Adi}, 
+	author = {Fiat, Amos and Shamir, Adi}, 
 	pages = {186-194},
 }
 
@@ -78,12 +78,12 @@
 	title = {The Append-Only Web Bulletin Board},
 	url = {http://dx.doi.org/10.1007/978-3-642-01465-9_16},
 	publisher = {Springer Berlin Heidelberg},
-	author = {HEATHER, James and LUNDIN, David},
+	author = {Heather, James and Lundin, David},
 	pages = {242-256}
 }
 
 @inproceedings{HKRS12,
-	author = {KHADER, Dalia and HAO, Feng and RYAN, Peter Y. A. and SMYTH, Ben},
+	author = {Khader, Dalia and Hao, Feng and Ryan, Peter Y. A. and Smyth, Ben},
 	title = {A Fair and Robust Voting System by Broadcast},
 	year = {2012},
 	booktitle = {EVOTE'12: 5th International Conference on Electronic Voting},
@@ -91,7 +91,7 @@
 }
 
 @inproceedings{HS11,
-	author = {HAENNI, Rolf and SPYCHER, Oliver},
+	author = {Haenni, Rolf and Spycher, Oliver},
 	title = {Secure internet voting on limited devices with anonymized DSA public keys},
 	booktitle = {Proceedings of the 2011 conference on Electronic voting technology/workshop on trustworthy elections},
 	series = {EVT/WOTE'11},
@@ -116,12 +116,12 @@
 	url = {http://dx.doi.org/10.1007/BF00196725},
 	publisher = {Springer-Verlag},
 	keywords = {Digital signatures; Public-key signatures; Public-key authentication; ElGamal signatures; Discrete logarithm one-way function; Signatures with preprocessing; Random exponentiated residues},
-	Author = {SCHNORR, Claus Peter},
+	Author = {Schnorr, Claus Peter},
 	pages = {161-174},
 }
 
 @article{Shamir79,
-	author = {SHAMIR, Adi},
+	author = {Shamir, Adi},
 	title = {How to share a secret},
 	journal = {Commun. ACM},
 	issue_date = {Nov. 1979},
@@ -141,7 +141,7 @@
 }
 
 @article{EG84,
-	author = {EL GAMAL, Taher},
+	author = {El Gamal, Taher},
 	journal = {Information Theory, IEEE Transactions on}, 
 	title = {A public key cryptosystem and a signature scheme based on discrete logarithms}, 
 	year = {1985}, 
@@ -157,7 +157,7 @@
 
 @techreport{ritter13a,
      title = {InstaCircle -- A Location-Bound Ad-Hoc Network for Android Devices},
-     author = {RITTER, Juerg},
+     author = {Ritter, Juerg},
      institution = {Bern University of Applied Sciences, Engineering and Information Technology},
      group = {E-Voting Group},
      year = {2013},
@@ -167,7 +167,7 @@
     
 @techreport{ritter12,
      title = {UniCrypt -- A Cryptographic Library Implemented in Java},
-     author = {RITTER, Juerg},
+     author = {Ritter, Juerg},
      institution = {Bern University of Applied Sciences, Engineering and Information Technology},
      group = {E-Voting Group},
      year = {2012},
@@ -177,7 +177,7 @@
 
 @phdthesis{Jonker09,
 	title = {Security Matters: Privacy in Voting and Fairness in Digital Exchange},
-	author = {JONKER, Hugo Lennaert},
+	author = {Jonker, Hugo Lennaert},
 	institution = {Eindhoven University of Technology and University of Luxembourg},
 	school = {Eindhoven University of Technology and University of Luxembourg},
 	year = {2009},
